# locscale

./: .gitignore  .readthedocs.yaml  404.html  CITATION.cff  LICENSE  MANIFEST.in  README.md  __init__.py  config.py  config.sh  environment.yml  environment_cpu.yml  environment_gpu.yml  index.html  locscale_v2.py  mkdocs.yml  post_install.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_locscale.sh  sitemap.xml
about/: index.html
analysis/: XYZOUT  auditing_pickle_output.py  changing_intensity_levels.py  orig_data_rescut.txt
docs/: .readthedocs.yaml  about.md  index.md  install.md
emmer/: emmer_functions.py  headers.py  modules_list_cleaner.txt  modules_list_full.txt
install/: index.html
locscale/: __init__.py  __version__.py  main.py  np_locscale_avg.py  np_locscale_fsc.py
recipe/: meta.yaml
reference_case/: data_required.txt
scripts/: compute.py  emdb_and_pdb_14150.json  locscale_headers.py  locscale_v2.py  mapmask.sh  np_locscale.py  pam_headers.py  preparation.py  pseudomodel_analysis.py  run_locscale.zsh  run_refmac.sh  run_refmac.zsh  theoretical_profiles.pickle
search/: search_index.json
source/: fsc_attributes_calc.py  locscale_mpi.py  np_locscale.py  np_locscale_fft.py  np_locscale_fsc.py  prepare_locscale_input.py  spline_fit_fsc.py
tests/: XYZOUT.mmcif  log.txt  orig_data_rescut.txt  test_basic.py  test_emmernet.py  test_locscale.py  test_modules_pseudomodels.py  test_pseudomodel_pipeline.py  test_pseudomodels.py  test_scaling.py  test_symmetry.py
utils/: common_imports.py  compute.py  fix_fftbig_dim.py  general.py  (+2 more)
(+146 files in other folders)
