[metadata]
name = locscale
version = 2.0.0
author = Alok Bharadwaj, Arjen J. Jakobi
url = https://gitlab.tudelft.nl/aj-lab/locscale/
license = BSD-3-Clause
description = Contrast optimization for cryo-EM maps
long_description = file: README.md
long_description_content_type = text/markdown
description-file=README.md
license_files=LICENSE.rst

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Unix
    Operating System :: Microsoft :: Windows 
    Operating System :: MacOS
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://gitlab.tudelft.nl/aj-lab/locscale/issues
    Documentation = https://gitlab.tudelft.nl/aj-lab/locscale/#README.md
    Source Code = https://gitlab.tudelft.nl/aj-lab/locscale/
    User Support = https://gitlab.tudelft.nl/aj-lab/locscale/issues
