[metadata]
description-file=README.md
license_files=LICENSE.rst

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Unix
    Operating System :: Microsoft :: Windows 
    Operating System :: MacOS
    License :: OSI Approved :: BSD License
